# breakout-server

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  package-lock.json  package.json
breakout-wasm/: Cargo.toml  LICENSE
breakout-wasm/src/: ball.rs  brick.rs  lib.rs  paddle.rs
docs/: 1.js  breakout_wasm.js  breakout_wasm_bg.wasm  index.html  index.js  main.js
src/: game.js  index.js  main.rs
